--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img src="https://stock.adobe.com/ke/search?k=bugatti+car&asset_id=420051678"
+         alt="Modern cars"
+    />
+    <img src="https://myplans.co.za/storage/2023/11/5-Bedroom-House-Plan-MLB-076.1DS-1.jpg"
+         alt="Ultra modern house"
+         title="We offer good living"
+    />
+         
+        
+
   </body>
 </html>
